--- a/ansible-jenkins.yaml
+++ b/ansible-jenkins.yaml
@@ -17,7 +17,7 @@
 
   - name: install docker
     become: true
-    command: sudo apt-get install docker-engine -y
+    apt: name='docker-engine'
 
   - name: add user mod
     command:  usermod -aG docker ubuntu
