--- a/ansible-jenkins.yaml
+++ b/ansible-jenkins.yaml
@@ -26,7 +26,7 @@
     file:
       path: DockerFile
       state: directory
-      
+
   - service: name=docker state=restarted
   - copy:
       src: ./Dockerfile
@@ -41,9 +41,7 @@
       state: directory
 
   - name: Build an image
-    docker_image: 
-      path: ./DockerFile/
-      name: jenkins_docker 
-      force: yes
+    command: docker build ./DockerFile -t jenkins_docker
+
   - name: run jenkins_docker container
     command: docker run  -d -p 8080:8080 -p 50000:50000 -v $HOME/jenkins:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker jenkins_docker
