--- a/ansible-jenkins.yaml
+++ b/ansible-jenkins.yaml
@@ -11,15 +11,17 @@
   - name: ensure docker registry is available
     apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-xenial main' state=present
 
+  - name: update cache
+    become: true
+    command: apt-get update
+    pause:
+      minutes: 3
 
   - name: install docker
     become: true
     apt: name='docker-engine' force='yes' 
 
-  - name: update cache
-    become: true
-    command: apt-get update
-    
+
   - name: add user mod
     command:  usermod -aG docker ubuntu
 
