--- a/ansible-jenkins.yaml
+++ b/ansible-jenkins.yaml
@@ -2,6 +2,10 @@
 - hosts: webservers
   become: true
   tasks:
+
+  - name: update cache
+    command: apt-get update
+
   - name: ensure repository key is installed
     apt_key:
       id: "58118E89F3A912897C070ADBF76221572C52609D"
@@ -11,9 +15,11 @@
   - name: ensure docker registry is available
     apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-xenial main' state=present
 
+  - name: update cache
+    command: apt-get update
+
   - name: install docker
-    become: true
-    apt: name='docker-engine' force='yes' 
+    command: apt-get install -y docker-engine
 
 
   - name: add user mod
